[package]
name = "redelete"
version = "0.1.0"
authors = ["ardeaf <ardeaf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.6.2"
dialoguer = "^0.5.0"
reqwest = { version = "0.10.1", features = ["json", "stream"] }
tokio = { version = "^0.2.10", features = ["full"] }
futures = "^0.3.0"
directories = "^2.0.2"
serde = { version= "1.0.104", features=["derive"]}
toml = "^0.5.6"
serde_json = "1.0.45"
webbrowser = "0.5.2"
nanoid = "^0.2.0"
url = "^2.1.1"
custom_error = "1.7.1"
once_cell = "1.3.1"
clap = "^2.33.0"

[dev-dependencies]
dirs = "^2.0.2"
serial_test = "*"
mockito = "^0.22.0"