[package]
name = "redelete"
version = "0.2.1"
authors = ["ardeaf <ardeaf@gmail.com>"]
edition = "2018"
repository = "https://github.com/ardeaf/redelete"
description = "Redelete deletes all your reddit comments and submissions, with optional filters for skipping."
readme = "README.md"
keywords = ["reddit", "privacy", "oauth", "cli"]
categories = ["command-line-utilities"]
license = "GPL-3.0-only"

[badges]
travis-ci = { repository = "ardeaf/redelete", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
tiny_http = "0.6.2"
reqwest = { version = "0.10.1", features = ["json", "stream"] }
tokio = { version = "^0.2.10", features = ["full"] }
futures = "^0.3.0"
directories = "^2.0.2"
serde = { version= "1.0.104", features=["derive"]}
toml = "^0.5.6"
serde_json = "1.0.45"
webbrowser = "0.5.2"
nanoid = "^0.2.0"
url = "^2.1.1"
custom_error = "1.7.1"
clap = "^2.33.0"
async-std = "^1.5.0"
rate_limit = "0.1.1"

[dev-dependencies]
dirs = "^2.0.2"
serial_test = "^0.3.2"
mockito = "0.23.1"